--- a/composer.json
+++ b/composer.json
@@ -7,10 +7,14 @@
     "require": {
         "php": ">=7.0.0",
         "barryvdh/laravel-cors": "^0.11.0",
+        "barryvdh/laravel-dompdf": "^0.8.2",
+        "barryvdh/laravel-snappy": "^0.4.1",
         "doctrine/dbal": "^2.6",
         "fideloper/proxy": "~3.3",
+        "h4cc/wkhtmltopdf-amd64": "0.12.x",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
+        "niklasravnsborg/laravel-pdf": "^2.0",
         "santigarcor/laratrust": "5.0.*",
         "tymon/jwt-auth": "dev-develop"
     },
